# video-summarizer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  mini_project_thesis.docx  pyproject.toml  ~$ni_project_thesis.docx
src/: preprocess.py  summarizer_app.py  video_kmeans.py
