[tool.poetry]
name = "video-summarizer"
version = "0.1.0"
description = "A video summarizer using ImageNet features extractor and Kmeans clustering."
authors = ["Amit Deo <magpie.arise@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.23.5"
opencv-python = "^4.7.0.72"
tensorflow = "^2.12"
streamlit = "^1.20.0"
scikit-learn = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
